[package]
name = "prom-attire"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]

description = "Procedural Macro for Procedural Macros to parse attributes"

repository = "https://github.com/Nemo157/prom-attire-rs"

readme = "README.md"
keywords = ["proc_macro", "derive", "attributes"]
categories = ["development-tools::procedural-macro-helpers"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "Nemo157/prom-attire-rs" }

[lib]
proc-macro = true

[workspace]
members = ["prom-attire-bootstrap", "prom-attire-impl"]

[dependencies]
error-chain = "0.8.1"
syn = "0.11.4"
prom-attire-bootstrap = { path = "prom-attire-bootstrap" }
prom-attire-impl = { path = "prom-attire-impl" }

[dev_dependencies]
quote = "0.3.12"
