[package]
name = "prom-attire"
version = "0.1.1"
authors = ["Wim Looman <wim@nemo157.com>"]

description = """
Procedural Macro Runtime for Procedural Macros to parse attributes
"""

repository = "https://github.com/Nemo157/prom-attire-rs"

readme = "README.md"
keywords = ["proc_macro", "derive", "attributes"]
categories = ["development-tools::procedural-macro-helpers"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "Nemo157/prom-attire-rs" }

[workspace]
members = [
  "prom-attire-bootstrap",
  "prom-attire-derive",
  "prom-attire-impl",
]

[dependencies]
prom-attire-derive = { version = "=0.1.1", path = "prom-attire-derive" }

[build-dependencies]
rustc_version = "0.2.2"

[dev-dependencies]
syn = "0.11.4"
quote = "0.3.12"
