[package]
name = "prom-attire-derive"
version = "0.1.1"
authors = ["Wim Looman <wim@nemo157.com>"]

description = """
Procedural Macro Derive (prom-attire-derive) for a Procedural Macro Runtime
(prom-attire) for Procedural Macros (yours!) to parse attributes (your users!)

This is an internal dependency of prom-attire, you should not need to depend on
it directly.
"""

repository = "https://github.com/Nemo157/prom-attire-rs"
license = "MIT/Apache-2.0"

build = "build.rs"

[lib]
proc-macro = true

[dependencies]
error-chain = "0.8.1"
syn = "0.11.4"
prom-attire-bootstrap = { version = "=0.1.1", path = "../prom-attire-bootstrap" }
prom-attire-impl = { version = "=0.1.1", path = "../prom-attire-impl" }

[build-dependencies]
rustc_version = "0.2.2"
